cabal-version: >=1.10
name: hw3
version: 0.1.0.0
license: BSD3
license-file: LICENSE
build-type: Simple
extra-source-files:
    ChangeLog.md

executable hw3
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    other-extensions: FlexibleContexts MultiParamTypeClasses
    ghc-options: -Wall
    build-depends:
        base >=4.9 && <4.10,
        containers >=0.5 && <0.6,
        mtl >=2.2 && <2.3,
        megaparsec >=6.5 && <6.6,
        text >=1.2 && <1.3
